--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.4",
+    "@sanity/client": "^6.2.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.14.4",
     "@types/node": "20.4.5",
