--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
     "@portabletext/react": "^3.0.4",
     "@sanity/client": "^6.2.0",
     "@sanity/image-url": "^1.0.2",
