--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^3.0.4",
     "@sanity/client": "^6.2.0",
     "@sanity/image-url": "^1.0.2",
@@ -32,5 +33,8 @@
     "styled-components": "5.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.4"
   }
 }
